--- a/Plot_RRFS_Reflectivity_Forecast.ipynb
+++ b/Plot_RRFS_Reflectivity_Forecast.ipynb
@@ -172,17 +172,17 @@
         "#################### FORM STUFF HERE ###################################################################################\n",
         "#@title Plot Config { vertical-output: true, form-width: \"50%\", display-mode: \"form\" }\n",
         "#@markdown Which Initialization Date?\n",
-        "init_date = \"2023-04-04\" #@param {type:\"date\"}\n",
+        "init_date = \"2023-05-19\" #@param {type:\"date\"}\n",
         "init_date = datetime.strptime(init_date,'%Y-%m-%d')\n",
         "init_strftime = init_date.strftime('%Y%m%d')\n",
         "print(init_strftime)\n",
         "#init_cyc = \"06\" #@param {type:\"date\"}\n",
-        "init_cyc = \"06\"\n",
+        "init_cyc = \"16\"\n",
         "init_cyc = datetime.strptime(init_cyc,'%H')\n",
         "init_strfcyc = init_cyc.strftime('%H')\n",
         "print(init_strfcyc)\n",
         "#init_fhr = \"18\" #@param {type:\"date\"}\n",
-        "init_fhr = \"18\"\n",
+        "init_fhr = \"04\"\n",
         "init_fhr = datetime.strptime(init_fhr,'%H')\n",
         "init_strfhr = init_fhr.strftime('%H')\n",
         "print(init_strfhr)\n",
@@ -210,7 +210,7 @@
         "#  https://noaa-hrrr-bdp-pds.s3.amazonaws.com/hrrr.20220201/conus/hrrr.t12z.wrfsfcf36.grib2\n",
         "#print(url)\n",
         "\n",
-        "url2 = f\"https://noaa-rrfs-pds.s3.amazonaws.com/rrfs_a/rrfs_a.\" + init_strftime+ \"/\" + init_strfcyc + \"/rrfs.t\" + init_strfcyc + \"z.natlev.f0\" + init_strfhr + \".conus_3km.grib2\"\n",
+        "url2 = f\"https://noaa-rrfs-pds.s3.amazonaws.com/rrfs_a/rrfs_a.\" + init_strftime+ \"/\" + init_strfcyc + \"/control/rrfs.t\" + init_strfcyc + \"z.natlev.f0\" + init_strfhr + \".conus_3km.grib2\"\n",
         "print(url2)"
       ],
       "metadata": {
